# fxp

./: .gitignore  pyproject.toml  setup.py
src/fxp/: __init__.py  num.py
tests/: test_fxp.py
